Added tables for reviews, routes for reviews and secured the api routes for admins
